# talyvor-lens

./: .env.example  .env.production.example  .gitignore  .golangci.yml  ADDING-A-PROVIDER.md  BUILD_STATE.md  COORDINATION.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.dev.yaml  docker-compose.trial-distill.yaml  docker-compose.trial.yaml  docker-compose.yaml  go.mod  go.sum
benchmarks/: README.md  bench_test.go
cmd/lens/: db.go  (+79 more)
deploy/: migrate-baseline-stamp.sh
docs/: AUDIT-POLICY.md  DISTILL-CONVERSION-PROOF.md  README.md  closed-test-economy.md  local-standup-runbook.md  migrate-from-helicone.md  migrate-from-litellm.md  quickstart.md  recommended-production-config.md  remote-host.md  staging-economy-turnon.md
migrations/: 0001_init.sql  0002_templates.sql  0003_ab_tests.sql  0004_branch_spend.sql  0005_workspaces.sql  0006_api_keys.sql  0007_warmer.sql  0008_batch_jobs.sql  0009_sessions.sql  0010_prompts.sql  0011_audit.sql  0012_eval.sql  0013_anomalies.sql  0014_guardrails.sql  0015_quality_scores.sql  0016_experiments.sql  0017_attribution.sql  0018_tenants.sql  0019_token_ledger.sql  0020_inference_nodes.sql  0021_embedding_nodes.sql  0022_annotations.sql  0023_patterns.sql  0024_marketplace.sql  0025_node_heartbeat.sql  0026_cache_nodes.sql  0027_lxc_credits.sql  0028_budgets.sql  0029_modality.sql  0030_eval_datasets.sql  0031_povi_receipts.sql  0032_povi_stakes.sql  (+78 more)
sdk/python/: README.md  pyproject.toml
sdk/python/talyvor_lens/: __init__.py  client.py  middleware.py  types.py
sdk/python/tests/: test_client.py  test_middleware.py
(+846 files in other folders)
